<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbarThumbVertical="@null"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/nss_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/about"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/service_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_to_nation_nservice_to_self"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="16dp" />



        <TextView
            android:id="@+id/about_nss_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_nss"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_nss_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/idea"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/objectives_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/objectives"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/objectives_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/idea2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nss_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="'NOT ME BUT YOU'."
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nss_aim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="The aim of NSS is to demonstrate this motto in day-to-day programs."
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activities_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Activities conducted under NSS till date\n"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dp"
            android:text="१)  दिनांक 10 फेब्रुवारी, 2023 रोजी शासकीय तंत्रनिकेतन मुंबई राष्ट्रीय सेवा योजना युनिट सेलचे उद्घाटन प्रसंगी संस्थेचे माननीय प्राचार्य
 आणि संबंधित अधिकारीी,कर्मचारी आणि मान्यवर"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_image"
            android:layout_width="600dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="२)  दिनांक 2 मार्च,2023 रोजी एन.एस.एस. शा. तं.नी.मुंबई स्वयंसेवकांनी एन.एस.एस प्रतिज्ञा घेतली तसेच स्त्री स्वयंसेवकांनी
जागतिक महिला दिन साजरा केला."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_j"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="३)  21 मार्च 2023 रोजी जागतिक जलदिनानिमित्त एन.एस.एस शा. तं.नी.मुंबई स्वयंसेवकांनी जल शपथ घेऊन जलसंवर्धनाशी संबंधित
स्लोगन जलवापरा ठिकाणी लावले."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_p"
            android:layout_width="450dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="४)  जागतिक आरोग्य दिनामनमित्त दिनांक 6 एप्रिल, 2023 रोजी एनएसएस शा. तं.नी.मुंबई युनिट सेल तफे आरोग्याबाबत जनजागृती
प्रभात फेरी काढण्यात आली."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_opp"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_7" />

        <ImageView
            android:id="@+id/activity_op"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="५)  दिनांक 15 ऑगस्ट, 2023 रोजी एनजी स्वराज फाउंडेशन आमि एनजी क्लब आयआयटी मुंबई तफे आयोजित क्लायिेट चेंज
इव्हेंट मध्ये सहभागी एनएसएस शा. तं.नी.मुंबई स्वयंसेवक. यामनमित्त संस्थेला वेदर  क्लॉक वितरीत करण्यात आले."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_1"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="६)  एनएसएस शा. तं.नी. मुंबई युनिट सेल तर्फे दिनांक 18 ऑगस्ट 2023 रोजी परिसरात स्वच्छता मोहीम राबवण्यात आली."
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/activity_2"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_13" />

        <ImageView
            android:id="@+id/activity_3"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_14" />

    </LinearLayout>
</ScrollView>
